--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
          p::first-letter{
           text-transform: capitalize;
          }
+            img{
+                height:200px;
+                width:200px;
+            }
         </style>
     </head>
     <body>
+        <img src ="graphleaf.jpg" >
         <h1 style="text-align: center;">simple selectors</h1> 
         
         <p id="simple">CSS selectors are used to "find" (or select) the HTML elements you want to style. <br>
